--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 </div>
                 <div class="modal-body p-4">
                     <div class="mb-4">
-                        <label class="form-label font-monospace">服務端點 (GAS URL)</label>
+                        <label class="form-label font-monospace">API服務端點 (GAS URL)</label>
                         <input type="url" class="form-control" id="settingGasUrl" placeholder="https://script.google.com/..." required>
                     </div>
                     <div class="mb-4">
@@ -548,9 +548,9 @@
                             <input type="text" class="form-control text-center font-monospace" id="shareLinkInput" readonly style="font-size: 0.8rem;">
                             <button class="btn btn-outline-secondary" onclick="copyShareLink()"><i class="bi bi-clipboard"></i></button>
                         </div>
-                        <div class="form-text text-muted mt-2">
+                        <p class="mt-3 small font-monospace" style="color: var(--brand-accent); font-weight: bold;">
                             * 此連結已包含您的設定，掃描後可直接存取相簿。
-                        </div>
+                        </p>
                     </div>
                 </div>
                 <div class="modal-footer flex-column">
@@ -588,7 +588,7 @@
                     
                     <!-- Download Btn (Top Left) -->
                     <a id="downloadLink" href="#" target="_blank" class="btn-oled position-absolute top-0 start-0 m-4 z-3">
-                        <i class="bi bi-file-earmark-arrow-down me-2"></i> 原始檔
+                        <i class="bi bi-file-earmark-arrow-down me-2"></i> 照片下載
                     </a>
                     
                     <!-- Navigation -->
