--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         /* Tabs in Admin Modal */
         .nav-tabs { border-bottom: 1px solid var(--border-subtle); }
-        .nav-tabs .nav-link { color: var(--text-muted); border: none; border-bottom: 2px solid transparent; transition: 0.3s; font-family: var(--font-mono); }
+        .nav-tabs .nav-link { color: var(--text-muted); border: none; border-bottom: 2px solid transparent; transition: 0.3s; font-family: var(--font-mono); cursor: pointer; }
         .nav-tabs .nav-link:hover { color: var(--text-primary); }
         .nav-tabs .nav-link.active { background: transparent; color: var(--brand-primary); border-bottom: 2px solid var(--brand-primary); }
 
@@ -144,12 +144,12 @@
                 <span id="navbarTitle">雲端相簿</span>
             </a>
             <div>
-                <!-- Viewer Mode Label (Shown only via share link) -->
+                <!-- Viewer Mode Label -->
                 <span id="viewerModeLabel" class="d-none user-select-none me-2" style="color: var(--brand-success); font-family: var(--font-mono); font-size: 0.8rem; border: 1px solid var(--brand-success); padding: 6px 12px; border-radius: 20px;">
                     <i class="bi bi-eye-fill me-1"></i> 瀏覽模式
                 </span>
                 
-                <!-- Admin Login Button (New Location) -->
+                <!-- Admin Login Button (Key Icon) -->
                 <button class="btn-oled btn-icon btn-oled-accent btn-settings" onclick="openLoginModal()" title="管理者登入">
                     <i class="bi bi-key-fill"></i>
                 </button>
@@ -209,13 +209,18 @@
         </div>
     </div>
 
-    <!-- Admin Dashboard Modal (Consolidated) -->
+    <!-- Admin Dashboard Modal (Unified) -->
     <div class="modal fade" id="adminDashboardModal" tabindex="-1" data-bs-backdrop="static">
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title"><i class="bi bi-shield-lock-fill me-2"></i>管理者後台</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" onclick="logoutAdmin()"></button>
+                    <div class="d-flex gap-2">
+                        <!-- Logout Button -->
+                        <button type="button" class="btn-oled btn-sm btn-oled-danger" onclick="logoutAdmin()">
+                            <i class="bi bi-box-arrow-right me-1"></i> 登出
+                        </button>
+                    </div>
                 </div>
                 <div class="modal-body p-0">
                     <!-- Tabs -->
@@ -282,7 +287,10 @@
                                     <input type="text" class="form-control text-center" id="shareLinkInput" readonly>
                                     <button class="btn btn-outline-secondary" onclick="copyShareLink()">複製</button>
                                 </div>
-                                <button class="btn-oled btn-oled-danger btn-sm" onclick="clearSettings()">清除本機設定</button>
+                                <p class="small font-monospace mb-4" style="color: var(--brand-accent); font-weight: bold;">
+                                    * 此連結已包含您的設定，掃描後可直接存取相簿。
+                                </p>
+                                <button class="btn-oled btn-oled-danger btn-sm" onclick="clearSettings()">清除本機設定 (Reset App)</button>
                             </div>
                         </div>
                     </div>
@@ -399,6 +407,7 @@
                     });
                     
                     showAlbumList();
+                    populateAdminAlbumSelect();
                 } else { throw new Error(json.message); }
             } catch (err) {
                 console.error(err);
@@ -519,6 +528,8 @@
 
         function logoutAdmin() {
             adminToken = "";
+            const modal = bootstrap.Modal.getInstance(document.getElementById('adminDashboardModal'));
+            if(modal) modal.hide();
             // alert("已登出"); 
         }
 
